# conquest_ai

./: cabal.project  imperial-conquest-ai.cabal
ai-io/AI/: IO.hs
clever-ai/: AI.hs
imperial-conquest/: imperial-conquest.cabal
imperial-conquest/src/: AdjList.hs  Examples.hs  Game.hs  Graph.hs  Heap.hs  Optimise.hs  PList.hs  PQueue.hs  ShortestPaths.hs  Util.hs
imperial-conquest/test/: Test.hs
imperial-conquest/test/cases/: bknapsackTests.txt  bknapsackTests2.txt  bknapsackTests3.txt  conflictZonesTests.txt  dijkstra.txt  insert.txt  knapsackTests.txt  knapsackTests2.txt  rank.txt
server/: Main.hs  Map.hs  OptParser.hs
src/: PageRank.hs
src/AI/: PlanetRank.hs  State.hs  Strategy.hs
stupid-ai/: AI.hs
test/: Test.hs
test/cases/: nextPageRank.txt  nextPlanetRank.txt  pageRankTests.txt  planetRankRush.txt  timidRush.txt  zergRush.txt
