cabal-version:      3.0
-- The name of the package.
name:               imperial-conquest-ai

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

synopsis:           COMP50001 Coursework 2
description:        Page Rank and AI

author:             Imperial College London
maintainer:         j.willis19@imperial.ac.uk
build-type:         Simple

common common-settings
    -- Options to pass to GHC, in this case, we want to turn on warnings
    ghc-options: -Wall -Wno-unused-matches -Wno-name-shadowing -Wno-incomplete-patterns -Wno-unused-imports
    -- Base language which the package is written in.
    default-language: Haskell2010
    default-extensions: FlexibleInstances, ScopedTypeVariables, MultiParamTypeClasses, StandaloneDeriving, InstanceSigs, TypeApplications, LambdaCase, MultiWayIf
    -- The range of GHC base library verisons that are supported
    build-depends:    base >=4.13 && <5, containers, binary, array, imperial-conquest

-- this is the code shared by the AIs
library
    import:           common-settings
    -- Modules exported by the library.
    exposed-modules:  AI.Strategy, AI.State, PageRank, AI.PlanetRank
    -- Directories containing source files.
    hs-source-dirs:   src

executable server
    import:           common-settings
    hs-source-dirs:   server
    other-modules:    OptParser, Map
    main-is:          Main.hs
    scope:            private
    -- random 1.2 removed the Read instance, we need that
    -- imperial-conquest-ai is needed for Strategy, allowing for flexibility, however this will need to change to run different students against each other
    -- unless we always pass "Skynet" through a server????
    build-depends:    bytestring, random < 1.2, mtl, transformers, no-buffering-workaround, MissingH, time, directory, filepath, process, optparse-applicative, imperial-conquest-ai

library ai-io
    import:           common-settings
    build-depends:    mtl, bytestring, imperial-conquest-ai
    hs-source-dirs:   ai-io
    exposed-modules:  AI.IO

common ai
    import:           common-settings
    build-depends:    ai-io, imperial-conquest-ai
    ghc-options:      -rtsopts

executable stupid-ai
    import:           ai
    hs-source-dirs:   stupid-ai
    main-is:          AI.hs

executable clever-ai
    import:           ai
    hs-source-dirs:   clever-ai
    main-is:          AI.hs

common test-common
    import:           common-settings
    -- Directories containing source files.
    hs-source-dirs:   test
    -- Enables the timeout during the tests to work properly
    -- If you're having difficulties running the tests, comment out the line below
    ghc-options:      -threaded
    build-depends:    imperial-conquest-ai,
                      tasty >=1.1 && <1.6

test-suite imperial-conquest-ai-test
    import:           test-common
    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0
    -- The entrypoint to the test suite.
    main-is:          Test.hs
    build-depends:    tasty-hunit
