cabal-version:      3.0
-- The name of the package.
name:               imperial-conquest

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

synopsis:           COMP50001 Coursework 1
description:        Graph algorithms and dynamic programming

author:             Imperial College London
maintainer:         j.willis19@imperial.ac.uk
build-type:         Simple

common common-settings
    -- Options to pass to GHC, in this case, we want to turn on warnings
    ghc-options: -Wall -Wno-unused-matches -Wno-name-shadowing -Wno-incomplete-patterns -Wno-unused-imports
    -- Base language which the package is written in.
    default-language: Haskell2010
    default-extensions: FlexibleInstances, ScopedTypeVariables, MultiParamTypeClasses, StandaloneDeriving, InstanceSigs
    -- The range of GHC base library verisons that are supported
    build-depends:    base >=4.13 && <5, containers, binary, array

library
    import:           common-settings
    -- Modules exported by the library.
    exposed-modules:  Game, Graph, PQueue, PList, Util, Heap, AdjList, Examples, ShortestPaths, Optimise
    -- Directories containing source files.
    hs-source-dirs:   src

common test-common
    import:           common-settings
    -- Directories containing source files.
    hs-source-dirs:   test
    -- Enables the timeout during the tests to work properly
    -- If you're having difficulties running the tests, comment out the line below
    ghc-options:      -threaded
    build-depends:    imperial-conquest,
                      tasty >=1.1 && <1.6

test-suite imperial-conquest-test
    import:           test-common
    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0
    -- The entrypoint to the test suite.
    main-is:          Test.hs
    build-depends:    tasty-hunit
